--- a/public/src/partials/poll_index.html
+++ b/public/src/partials/poll_index.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
         <div class="panel-footer">
-            <button type="button" ng-click="saveVote(vote)" class="btn btn-primary btn-sm">Vote</button>
+            <button type="button" ng-click="saveVote()" class="btn btn-primary btn-sm">Vote</button>
     </div>
     </div>
 </div>
